--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="./assets/style/./home.css">
 </head>
 <body>
-  <h1>Hello world!</h1>
+  <header class="header">
+    <div class="container">
+      <h1>Hello world!</h1>
+    </div>
+  </header>
 </body>
 </html>
