--- a/index.html
+++ b/index.html
@@ -1,14 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>InteriorDesign</title>
-  <link rel="stylesheet" href="./assets/style/./home.css">
-</head>
-<body>
-  <h1>Hello world!</h1>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:ital,wght@0,500;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>InteriorDesign</title>
+    <link rel="stylesheet" href="./assets/style/./home.css" />
+  </head>
+  <body>
+    <div class="form">
+      <div class="left">
+        <h1 class="title">Interested to Work With Us?</h1>
+        <p class="d">
+          Fill the form and send the type of your room and tell us what you need
+          for your future room, then wait until we reply it.
+        </p>
+        <hr />
+      </div>
+      <form class="right">
+        <label for="name">Name</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          placeholder="Enter your name"
+        />
+        <label for="email">Email Address</label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email address"
+        />
+        <label for="type">Type room</label>
+        <input
+          type="text"
+          name="type"
+          id="type"
+          placeholder="Enter type room"
+        />
+        <label for="us">Tell us</label>
+        <input
+          type="text"
+          name="us"
+          id="us"
+          style="margin-bottom: 58px"
+          placeholder="Tell us what you need"
+        />
 
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, sint?</p>
-</body>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+
+    <div class="footer">
+      <div class="left">
+        <div class="logo">
+          Newsletter
+          <hr />
+        </div>
+        <p class="d">
+          Subscribe to our newsletter for awesome newsletter and daily
+          inspiration.
+        </p>
+        <form action="">
+          <input type="email" placeholder="Email address" />
+          <button type="submit">Subsribe</button>
+        </form>
+
+        <a href="#" class="copy">Created @ 2021 Interiorqu.com.StudioWebsite</a>
+      </div>
+      <div class="right">
+        <ul>
+          <li>Navigation</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Workflow</a></li>
+          <li><a href="#">Reviews</a></li>
+          <li><a href="#">Project</a></li>
+        </ul>
+        <ul>
+          <li>About</li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul>
+          <li>Social</li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">WhatsApp</a></li>
+        </ul>
+
+        <a href="#" class="copy">
+          <p>Privacy Policy</p>
+          <p>Terms & Conditions</p>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
