--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1>Hello world!</h1>
+      <h1 class="header__logo">
+        Interiorqu.
+      </h1>
+
+      <nav class="header__links">
+        <ul>
+          <li><a href="#\">Home</a><div></div></li>
+          <li><a href="#\">Workflow</a><div></div></li>
+          <li><a href="#\">Reviews</a><div></div></li>
+          <li><a href="#\">Project</a><div></div></li>
+          <li>
+            <button class="button">
+              Contact Us
+            </button>
+          </li>
+        </ul>
+      </nav>
     </div>
+
   </header>
 </body>
 </html>
