--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__logo">
-        Interiorqu.
+        <a href="#\">Interiorqu.</a>
       </h1>
 
       <nav class="header__links">
@@ -29,5 +29,25 @@
     </div>
 
   </header>
+
+  <section class="showcase">
+    <div class="container">
+      <h2>Refresh your Room and Make Awesome Interior Design With Us!</h2>
+      <p>We are Interior Design Team Based in Wakanda, 58th street East Waka. We provide Interior Design services since 1899 and have many client from various country.</p>
+      <button class="button">Get Started</button>
+      <div class="showcase__image">
+        <div class="showcase__image_first-badge">
+          <p>52+</p>
+          <p>Satisfied Clients
+            From Various Country.</p>
+        </div>
+        <div class="showcase__image_second-badge">
+          <p>15+</p>
+          <p>Years of Experience in
+            Interior Design</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
