feat: create showcase section

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
   <section class="showcase">
     <div class="container">
       <h2>Refresh your Room and Make Awesome Interior Design With Us!</h2>
-      <p>We are Interior Design Team Based in Wakanda, 58th street East Waka. We provide Interior Design services since 1899 and have many client from various country.</p>
+      <p>We are Interior Design Team Based in Wakanda, 58th street East Waka. We provide Interior <br> Design services since 1899 and have many client from various country.</p>
       <button class="button">Get Started</button>
       <div class="showcase__image">
-        <div class="showcase__image_first-badge">
+        <div class="showcase__image_badge first-badge">
           <p>52+</p>
-          <p>Satisfied Clients
+          <p>Satisfied Clients <br>
             From Various Country.</p>
         </div>
-        <div class="showcase__image_second-badge">
+        <div class="showcase__image_badge second-badge">
           <p>15+</p>
-          <p>Years of Experience in
+          <p>Years of Experience in <br>
             Interior Design</p>
         </div>
       </div>
