--- a/index.html
+++ b/index.html
@@ -26,7 +26,29 @@
           </li>
         </ul>
       </nav>
+
+      <label for="menu-bar" class="header__menu-bar">
+        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+      </label>
+
+      <input id="menu-bar" type="checkbox">
+
+      <div class="menu-dropnav">
+        <ul>
+          <li><a href="#\">Home</a><div></div></li>
+          <li><a href="#\">Workflow</a><div></div></li>
+          <li><a href="#\">Reviews</a><div></div></li>
+          <li><a href="#\">Project</a><div></div></li>
+          <li>
+            <button class="button">
+              Contact Us
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
+
+
 
   </header>
 
