--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section class="showcase">
     <div class="container">
-      <h2>Refresh your Room and Make Awesome Interior Design With Us!</h2>
+      <h2>Refresh your Room and Make Awesome <br> Interior Design With Us!</h2>
       <p>We are Interior Design Team Based in Wakanda, 58th street East Waka. We provide Interior <br> Design services since 1899 and have many client from various country.</p>
       <button class="button">Get Started</button>
       <div class="showcase__image">
