feat: add latest-projects section

--- a/index.html
+++ b/index.html
@@ -71,5 +71,26 @@
       </div>
     </div>
   </section>
+
+  <section class="latest-projects">
+
+    <div class="container">
+      <h2>The Latest Project</h2>
+      <p>OUR MINI GALLERY</p>
+
+      <div class="latest-projects__items">
+        
+      </div>
+    </div>
+  </section>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
