feat: admin panel table created

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__logo">
-        <a href="#\">Interiorqu.</a>
+        <a href="./admin.html" target="_blank">Interiorqu.</a>
       </h1>
 
       <nav class="header__links">
@@ -79,7 +79,7 @@
       <p>OUR MINI GALLERY</p>
 
       <div class="latest-projects__items">
-        
+
       </div>
     </div>
   </section>
@@ -92,5 +92,7 @@
   <br>
   <br>
   <br>
+  <script src="./script.js"></script>
+
 </body>
 </html>
