feat: keep working on localstorage

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
       <p>OUR MINI GALLERY</p>
 
       <div class="latest-projects__items">
-
       </div>
     </div>
   </section>
@@ -92,7 +91,7 @@
   <br>
   <br>
   <br>
-  <script src="./script.js"></script>
+  <script src="./script-index.js"></script>
 
 </body>
 </html>
