feat: add delete option, add image set to localstorage

--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,9 @@
           <label for="image"></label>
           <input class="image" id="image" type="file">
 
-          <input class="add-btn" type="submit" value="Добавить">
+          <input class="edit-btn hidden" type="submit" value="Сохранить">
+
+          <input class="add-btn" type="button" value="Добавить">
         </fieldset>
       </form>
 
@@ -52,8 +54,13 @@
         </tbody>
 
       </table>
+
+      <br>
+      <br>
+      <br>
     </div>
   </div>
+
 
   <script src="./script.js"></script>
 
