feat: edit functionality almost done

--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
           <label for="image"></label>
           <input class="image" id="image" type="file">
 
-          <input class="edit-btn hidden" type="submit" value="Сохранить">
+          <input class="save-btn hidden" type="submit" value="Сохранить">
 
           <input class="add-btn" type="button" value="Добавить">
         </fieldset>
