feat: add authorization

--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./assets/style/admin/admin.css">
 </head>
 <body>
+  <div class="authorization">
+    <h2>Sign in</h2>
+    <form action="#\" class="authorization__form">
+      <input type="text" class="authorization__form_login">
+      <input type="password" class="authorization__form_password">
+      <input type="submit" value="Войти" class="authorization__form_button">
+    </form>
+  </div>
+
   <div class="dashboard">
     <aside class="dashboard__sections">
       <h2>
@@ -15,6 +24,10 @@
       <p class="dashboard__sections_item">
         The Latest Projects
       </p>
+
+      <form action="#\" class="dashboard__sections_form">
+        <input class="dashboard__sections_form_button" type="submit" value="Выйти">
+      </form>
 
     </aside>
 
