--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
         <div class="cont" data-carousel>  
             <ul data-slides>
                 <li class="slide" data-active>
-                    <div class="img-place"></div>
+                    <a href="#" class="img-place"></a>
                     <div class="text">
                         <div class="tx">
                             <h1>Mr. Leonardo</h1>
@@ -126,10 +126,16 @@
                         <p>“Modern desk style featured with tropical stuff with plant and the lighting for a warm, and comforting take on interior design minimalist.<br>I love this design!. Thanks Interiorqu.” </p>
                         <div class="btns">
                             <button class="carousel-button prev" data-carousel-button="prev">
-                                <img src="./assets/media/prev.png" alt="">
+                                <svg class="prev-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M20 9L2 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M9 17L2 9L9 1" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>
                             </button>
                             <button class="carousel-button next" data-carousel-button="next">
-                                <img src="./assets/media/next.png" alt="">
+                                <svg class="next-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 9L19 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M12 1L19 9L12 17" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>                                    
                             </button>
                         </div>
                     </div>
@@ -144,10 +150,16 @@
                         <p>“Modern desk style featured with tropical stuff with plant and the lighting for a warm, and comforting take on interior design minimalist.<br>I love this design!. Thanks Interiorqu.” </p>
                         <div class="btns">
                             <button class="carousel-button prev" data-carousel-button="prev">
-                                <img src="./assets/media/prev.png" alt="">
+                                <svg class="prev-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M20 9L2 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M9 17L2 9L9 1" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>
                             </button>
                             <button class="carousel-button next" data-carousel-button="next">
-                                <img src="./assets/media/next.png" alt="">
+                                <svg class="next-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 9L19 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M12 1L19 9L12 17" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>                                    
                             </button>
                         </div>
                     </div>
@@ -162,10 +174,16 @@
                         <p>“Modern desk style featured with tropical stuff with plant and the lighting for a warm, and comforting take on interior design minimalist.<br>I love this design!. Thanks Interiorqu.” </p>
                         <div class="btns">
                             <button class="carousel-button prev" data-carousel-button="prev">
-                                <img src="./assets/media/prev.png" alt="">
+                                <svg class="prev-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M20 9L2 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M9 17L2 9L9 1" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>
                             </button>
                             <button class="carousel-button next" data-carousel-button="next">
-                                <img src="./assets/media/next.png" alt="">
+                                <svg class="next-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 9L19 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M12 1L19 9L12 17" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>                                    
                             </button>
                         </div>
                     </div>
@@ -180,10 +198,16 @@
                         <p>“Modern desk style featured with tropical stuff with plant and the lighting for a warm, and comforting take on interior design minimalist.<br>I love this design!. Thanks Interiorqu.” </p>
                         <div class="btns">
                             <button class="carousel-button prev" data-carousel-button="prev">
-                                <img src="./assets/media/prev.png" alt="">
+                                <svg class="prev-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M20 9L2 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M9 17L2 9L9 1" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>
                             </button>
                             <button class="carousel-button next" data-carousel-button="next">
-                                <img src="./assets/media/next.png" alt="">
+                                <svg class="next-icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 9L19 9" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                    <path d="M12 1L19 9L12 17" stroke="#FF6A28" stroke-width="2" stroke-linecap="round"/>
+                                </svg>                                    
                             </button>
                         </div>
                     </div>
