refactor: discomment home.html file

--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
-<!-- <!DOCTYPE html>
-<html lang="en"> -->
-<!-- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.css" integrity="sha512-+1GzNJIJQ0SwHimHEEDQ0jbyQuglxEdmQmKsu8KI7QkMPAnyDrL9TAnVyLPEttcTxlnLVzaQgxv2FpLCLtli0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <title>Interiorqu</title>
-</head> -->
-<!-- <body>
+</head>
+<body>
     <div class="slider-title">
         <div class="cont">
             <h1>How We Work</h1>
@@ -214,5 +214,5 @@
   
 
 
-</body> -->
-<!-- </html> -->
+</body>
+</html>
