added script to recieve data from form

--- a/admin.html
+++ b/admin.html
@@ -24,12 +24,29 @@
       <p class="dashboard__sections_item">
         The Latest Projects
       </p>
+      <p class="dashboard__sections_item" id="fd">Form Datas</p>
 
       <form action="#\" class="dashboard__sections_form">
         <input class="dashboard__sections_form_button" type="submit" value="Выйти">
       </form>
 
     </aside>
+
+    <div class="formDatas">
+      <table>
+        <thead>
+          <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Type</th>
+          <th>Comment</th>
+          </tr>
+        </thead>
+        <tbody id="tableData">
+          
+        </tbody>
+      </table>
+    </div>
 
     <div class="dashboard__panel">
       <h2>
