--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       </p>
       <hr />
     </div>
-    <form class="right">
+    <form class="right" id="myForm">
       <label for="name">Name</label>
       <input
         type="text"
@@ -288,7 +288,7 @@
         placeholder="Tell us what you need"
       />
 
-      <button type="submit">Submit</button>
+      <button type="button" value="Отправить" onclick="formData()">Submit</button>
     </form>
   </div>
 
